--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jakeandsabrina</title>
+  <title>Jake & Sabrina</title>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <div class="jumbotron navbar-custom-background">
+    <div class="wrapper">
+      <h1>Jake <small>&</small> Sabrina's Wedding</h1>
+    </div>
+  </div>
+
+  <div id="stickyalias" style="width:100%;height:51px;display:none;"></div>
+
+  <!--  navbar-fixed-top -->
+  <nav id="stickyheader" class="navbar navbar-default navbar-static-top" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+
+
+    <div class="wrapper">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Jake & Sabrina</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#When"><span class="glyphicon glyphicon-calendar"></span> When</a></li>
+          <li><a href="#Where"><span class="glyphicon glyphicon-map-marker"></span> Where</a></li>
+          <li><a href="#What"><span class="glyphicon glyphicon-cutlery"></span> What</a></li>
+          <li><a href="#Why"><span class="glyphicon glyphicon-heart"></span> Why</a></li>
+          <li><a href="#How"><span class="glyphicon glyphicon-link"></span> How (RSVP)</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+
+    </div>
+  </nav>
+
 
 <%= yield %>
 
