--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,5 +1,103 @@
-<h1>New rsvp</h1>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', rsvps_path %>
+  <div class="full" id="When">
+    <article class="wrapper">
+
+      <div class="row">
+        <div class="col-md-8 col-sm-10">
+          <h1><small>When</small><br />August 1st, 2014</h1>
+          <p>
+            This date is special to us. On the day of the wedding, we will have been together for exactly seven years.
+
+          </p>
+          <p>
+            The ceremony will be begin at 5pm and the dinner and reception will follow immediately, so come ready to eat and dance!
+          </p>
+        </div>
+        <div class="col-md-4 col-sm-2 hidden-xs">
+          <%= image_tag "August1st.png", :class => "img-circle img-responsive" %>
+        </div>
+      </div>
+    </article>
+  </div>
+
+
+
+
+
+
+  <div class="full" id="Where">
+    <article class="wrapper">
+
+      <div class="row" style="padding-bottom: 50px;">
+        <div class="col-md-4 col-sm-2 hidden-xs">
+          <%= image_tag "westthunder.png", :class => "img-rounded img-responsive" %>
+        </div>
+        <div class="col-md-8 col-sm-10">
+          <h1><small>Where</small><br />West Thunder Community Centre</h1>
+          <p>West Thunder Community Centre is located at:
+            <div style="text-align:center;">
+              <address>
+              915 Edward St. South<br>
+              Thunder Bay, Ontario<br>
+              Canada<br>
+              </address>
+            </div>
+          </p>
+          <p>This is also where Jake’s parents celebrated their wedding in 1998!</p>
+        </div>
+
+        <div class="col-md-4 col-sm-2 visible-xs">
+          <%= image_tag "westthunder.png", :class => "img-rounded img-responsive" %>
+        </div>
+      </div><!-- row -->
+
+      <div class="row">
+        <div id="map-canvas" class="">
+        </div>
+      </div>
+    </article>
+  </div>
+
+
+
+
+
+
+
+
+
+  <div class="full" id="What">
+    <article class="wrapper">
+      <h2><small>What</small><br />Dining, Dancing, Sharing, and Celebrating</h2>
+        <p>A delicious buffet will be served, and there will be an open bar.</p>
+        <p>Please make sure to let us know in the RSVP comments section if you or your guest have any food allergies or special concerns.</p>
+        <p>Know of a song that will get you up and dancing? Submit it here and we will pass it along to the DJ.</p>
+        <div id="music" class="well"><%= render :partial => '/song_requests/form' %>
+        </div>
+    </div>
+  </div>
+
+
+
+  <div class="full" id="Why">
+    <article class="wrapper">
+      <h2><small>Why</small><br />Because we love each other, of course.</h2>
+<!--       <p>
+        Because we love each other, of course.
+      </p> -->
+    </article>
+  </div>
+
+
+  <div class="full" id="How">
+    <article class="wrapper">
+      <h2><small>How</small><br />Répondez s'il vous plaît</h2>
+      <div id="rsvp" class="well">
+        <%= render 'form' %>
+      </div>
+    </article>
+  </div>
+
+
+  <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
