ADded TBD into guest field.

--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -31,6 +31,11 @@
         <%= f.text_field :guest, :class => 'form-control' %>
       </div>
     </div>
+    <div class="col-sm-offset-3 col-sm-9">
+      <p>
+        Please enter TBD if you would like to invite a guest but don't know who yet. Please email us when you know at jake@jwinters.ca
+      </p>
+    </div>
     <div class="field form-group">
       <%= f.label :attending, "Attendence:", :class => 'col-sm-3 control-label' %>
       <div class="col-sm-9">
