Correcting Image sizes.

--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -31,7 +31,7 @@
 
       <div class="row" style="padding-bottom: 50px;">
         <div class="col-md-4 col-sm-2 hidden-xs">
-          <%= image_tag "westthunder.png", :class => "img-rounded img-responsive" %>
+          <%= image_tag "westthunder2.jpg", :class => "img-rounded img-responsive" %>
         </div>
         <div class="col-md-8 col-sm-10">
           <h1><small>Where</small><br />West Thunder Community Centre</h1>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="col-md-4 col-sm-2 visible-xs">
-          <%= image_tag "westthunder.png", :class => "img-rounded img-responsive" %>
+          <%= image_tag "westthunder2.jpg", :class => "img-rounded img-responsive" %>
         </div>
       </div><!-- row -->
 
