--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -33,7 +33,10 @@
     </div>
     <div class="col-sm-offset-3 col-sm-9">
       <p>
-        Please enter TBD if you would like to invite a guest but don't know who yet. Please email us when you know at jake@jwinters.ca
+        Please enter TBD if you would like to invite a guest but don't know who yet.
+      </p>
+      <p>
+        Please email us when you know at jake@jwinters.ca
       </p>
     </div>
     <div class="field form-group">
