--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -5,7 +5,7 @@
 
       <div class="row">
         <div class="col-md-8 col-sm-10">
-          <h1><small>When</small><br />August 1st, 2014</h1>
+          <h2><small>When</small><br />August 1st, 2014</h2>
           <p>
             This date is special to us. On the day of the wedding, we will have been together for exactly seven years.
 
@@ -34,7 +34,7 @@
           <%= image_tag "westthunder2.jpg", :class => "img-rounded img-responsive" %>
         </div>
         <div class="col-md-8 col-sm-10">
-          <h1><small>Where</small><br />West Thunder Community Centre</h1>
+          <h2><small>Where</small><br />West Thunder Community Centre</h2>
           <p>West Thunder Community Centre is located at:
             <div style="text-align:center;">
               <address>
@@ -75,6 +75,10 @@
         <p>Know of a song that will get you up and dancing? Submit it here and we will pass it along to the DJ.</p>
         <div id="music" class="well"><%= render :partial => '/song_requests/form' %>
         </div>
+        <h3><span class="glyphicon glyphicon-exclamation-sign"></span> Please Note! We are having an “Unplugged Ceremony”</h3>
+        <p>
+          An "unplugged" ceremony means that we ask that all cameras, cell phones, and other digital devices have been turned off and put away for the duration of the ceremony. We have hired a brilliant photographer who will handle the pictures, so you can fully enjoy the moment with us. After the recessional, feel free to break out your gadgets!
+        </p>
     </div>
   </div>
 
