Added registry hurp derp derp hurp derp.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
           <li><a href="#Where"><span class="glyphicon glyphicon-map-marker"></span> Where</a></li>
           <li><a href="#What"><span class="glyphicon glyphicon-cutlery"></span> What</a></li>
           <li><a href="#Why"><span class="glyphicon glyphicon-heart"></span> Why</a></li>
+          <li><a href="#Registry"><span class="glyphicon glyphicon-barcode"></span> Registry</a></li>
           <li><a href="#How"><span class="glyphicon glyphicon-link"></span> How (RSVP)</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
