--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -92,7 +92,13 @@
       </p> -->
     </article>
   </div>
-
+  
+  <div class="full" id="Registry">
+    <article class="wrapper">
+      <h2>Registry</h2>  
+        <p>We have registered at Sears. You can see the registry <a href="http://www.giftregistry.sears.ca/gift/egrSearch002.jsp" target="_blank" style="color:blue;">here</a>, using registry number 201407460141.</p>
+    </article>
+  </div>
 
   <div class="full" id="How">
     <article class="wrapper">
